#595 - Update style for videoplayer

--- a/themes/openy_themes/openy_rose/scss/styles.scss
+++ b/themes/openy_themes/openy_rose/scss/styles.scss
@@ -48,6 +48,7 @@
 @import 'modules/simple_content';
 @import 'modules/location';
 @import 'modules/breadcrumbs';
+@import 'modules/video';
 
 // Paragraphs
 @import 'paragraphs/1c';
