--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -2265,60 +2265,6 @@ body {
   }
 }
 
-.paragraph--type--video-player .field-media-local-video {
-  padding: 20px;
-}
-
-.sidebar-region .video-js {
-  width: 300px !important;
-  height: 200px !important;
-}
-@media (min-width: 30em) and (max-width: 61.9375em) {
-  .sidebar-region .video-js {
-    width: 180px !important;
-    height: 120px !important;
-  }
-}
-@media (min-width: 62em) {
-  .sidebar-region .video-js {
-    width: 300px !important;
-    height: 200px !important;
-  }
-}
-.sidebar-region .video-js.vjs-fullscreen {
-  width: 100% !important;
-  height: 100% !important;
-  padding-top: 0 !important;
-}
-
-.video-js {
-  width: 300px !important;
-  height: 200px !important;
-}
-@media (min-width: 30em) {
-  .video-js {
-    width: 320px !important;
-    height: 240px !important;
-  }
-}
-@media (min-width: 48em) {
-  .video-js {
-    width: 400px !important;
-    height: 300px !important;
-  }
-}
-@media (min-width: 62em) {
-  .video-js {
-    width: 640px !important;
-    height: 480px !important;
-  }
-}
-
-.vjs-tech {
-  width: 100% !important;
-  height: 100% !important;
-}
-
 .site-alert {
   font-family: "Cachet W01 Book", Verdana, sans-serif;
   width: 100%;
@@ -7343,6 +7289,51 @@ article .node--view-mode-flexible-content h2 a span {
 }
 .breadcrumbs ol a {
   color: #fff;
+}
+
+.field-media-local-video {
+  padding: 20px;
+}
+.field-media-local-video video {
+  width: 300px !important;
+  height: 200px !important;
+}
+@media (min-width: 30em) {
+  .field-media-local-video video {
+    width: 320px !important;
+    height: 240px !important;
+  }
+}
+@media (min-width: 48em) {
+  .field-media-local-video video {
+    width: 400px !important;
+    height: 300px !important;
+  }
+}
+@media (min-width: 62em) {
+  .field-media-local-video video {
+    width: 640px !important;
+    height: 480px !important;
+  }
+}
+
+.sidebar-region .field-media-local-video {
+  padding: 20px;
+}
+.sidebar-region .field-media-local-video video {
+  width: 300px !important;
+  height: 200px !important;
+}
+@media (min-width: 30em) and (max-width: 61.9375em) {
+  .sidebar-region .field-media-local-video video {
+    width: 180px !important;
+    height: 120px !important;
+  }
+}
+.sidebar-region .field-media-local-video .video-js.vjs-fullscreen {
+  width: 100% !important;
+  height: 100% !important;
+  padding-top: 0 !important;
 }
 
 .paragraph-1c-wrapper {
