--- a/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
+++ b/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
@@ -804,6 +804,10 @@
       color: #959595;
     }
     &.booked {
+      > a {
+        border-radius: 5px;
+        background-color: #d8d8d8;
+      }
       .price {
         visibility: hidden;
       }
