[YTCDN-110][YTCDN-112][YTCDN-115][YTCDN-117][YTCDN-118] CDN UX fixes and improvements

--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-wrapper.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-wrapper.html.twig
@@ -35,7 +35,7 @@
         {% endfor %}
       </div>
       <div class="cdn-village-calendars col-sm-8">
-        <p><strong>{{ 'Please select check in through check out dates*'|t }}</strong></p>
+        <p><strong>{{ 'Please select check in through check out dates'|t }}</strong></p>
           {% for key, data in teasers %}
           <div class="cdn-calendar" data-index="{{ key }}">
             <div class="cdn-calendar-list">
