Adding fixed width to logo to fix IE issue

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -385,6 +385,7 @@ body {
 @media (min-width: 62em) {
   .page-head__logo .site-logo {
     position: absolute;
+    width: 250px;
   }
 }
 .page-head__logo .site-slogan {
