--- a/themes/openy_themes/openy_rose/scss/modules/_header.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_header.scss
@@ -40,6 +40,7 @@
     .site-logo {
       @include breakpoint($screen-desktop) {
         position: absolute;
+        width: 250px;
       }
     }
 
