Add mobile menu to camps and locations.

--- a/themes/openy_themes/openy_lily/css/colors.css
+++ b/themes/openy_themes/openy_lily/css/colors.css
@@ -1,10 +1,11 @@
 /* ---------- Color Module Styles ----------- */
 body {
-  background-color: #ffffff;
+  background-color: #fffffb;
   color: #636466;
 }
 a,
-.link {
+.link,
+.node--view-mode-full.node--type-facility .associated-branch-title a {
   color: #377bb5;
 }
 #page-footer #block-openy-lily-footersocialblock .field-block-content ul li a {
@@ -117,7 +118,7 @@ header#page-head .top-navs .nav-wrapper .main-nav #block-openy-lily-main-menu .n
 }
 
 #page-footer {
-  background: #ffffff;
+  background: #fffff9;
 }
 #page-footer nav ul li a,
 #page-footer #block-openy-lily-footermenucenter .nav li a,
@@ -319,6 +320,7 @@ body .branch-popup .ui-dialog-content h3 {
   color: #a8a8a9;
 }
 
+.microsites-menu__wrapper,
 .is-camp .camp-menu-wrapper,
 .is-camp .camp-menu-wrapper a,
 .is-camp .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a,
@@ -376,6 +378,7 @@ body .is-camp .branch-popup .ui-dialog-content h3 {
 }
 
 /* Location (Branch) specific overrides */
+.microsites-menu__wrapper,
 .is-branch .location-menu-wrapper {
   background-color: #383839;
 }
