--- a/themes/openy_themes/openy_lily/sass/misc/_program.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_program.scss
@@ -3,6 +3,9 @@
     padding: 0;
     .main {
       padding: 40px 0;
+      @media (max-width: $tablet) {
+        padding: 20px 15px 5px 15px;
+      }
     }
     .image {
       margin: -130px 0 0;
