--- a/themes/openy_themes/openy_lily/css/style.css
+++ b/themes/openy_themes/openy_lily/css/style.css
@@ -10166,6 +10166,11 @@ body.path-search #block-mainpagecontent li {
 .program-header .content .main {
   padding: 40px 0;
 }
+@media (max-width: 768px) {
+  .program-header .content .main {
+    padding: 20px 15px 5px 15px;
+  }
+}
 .program-header .content .image {
   margin: -130px 0 0;
   position: absolute !important;
@@ -11829,18 +11834,27 @@ a.sports-icon.floor-hockey {
 .paragraph--type--camp-menu {
   margin-bottom: 30px;
 }
-@media (min-width: 0) and (max-width: 48em) {
+@media (min-width: 0) and (max-width: 62em) {
   .paragraph--type--microsites-menu,
   .paragraph--type--camp-menu {
-    display: none;
+    position: relative;
+    height: auto;
+    z-index: 10;
+    width: 100%;
+    margin-bottom: 0;
   }
 }
 .paragraph--type--microsites-menu .camp-menu-wrapper,
 .paragraph--type--camp-menu .camp-menu-wrapper {
-  padding: 0 30px;
   background: #383838;
-  z-index: 8;
   overflow: visible !important;
+}
+@media (min-width: 992px) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper,
+  .paragraph--type--camp-menu .camp-menu-wrapper {
+    padding: 0 30px;
+    z-index: 8;
+  }
 }
 .paragraph--type--microsites-menu .camp-menu-wrapper .columns-gradient,
 .paragraph--type--camp-menu .camp-menu-wrapper .columns-gradient {
@@ -11854,7 +11868,12 @@ a.sports-icon.floor-hockey {
 .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu {
   width: 100% !important;
   text-align: center;
-  height: 51px !important;
+}
+@media (min-width: 992px) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu {
+    height: 51px !important;
+  }
 }
 @media (min-width: 75em) {
   .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu,
@@ -11862,12 +11881,46 @@ a.sports-icon.floor-hockey {
     height: 57px !important;
   }
 }
+@media (min-width: 0) and (max-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu {
+    display: block;
+    position: static;
+    float: none;
+    min-width: 1px;
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    height: auto;
+  }
+}
 .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li,
 .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li {
   float: none;
-  display: table-cell;
-  width: 1%;
-  vertical-align: top;
+}
+@media (min-width: 992px) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li {
+    display: table-cell;
+    width: 1%;
+    vertical-align: top;
+  }
+}
+@media (min-width: 0) and (max-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li {
+    background: none;
+    display: none;
+    border-top: 1px solid #3e3e3e;
+    margin: 0;
+    position: relative;
+    padding: 0;
+    list-style: none;
+    height: auto;
+  }
 }
 .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a,
 .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a {
@@ -11878,11 +11931,12 @@ a.sports-icon.floor-hockey {
   border: 0 !important;
   border-radius: 0;
   background-color: #383838;
-  color: #FFF;
+  color: #fff;
   position: relative;
   height: 51px;
   white-space: nowrap;
   font-weight: normal;
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
   font-size: 16px;
   line-height: 1.4em;
   -webkit-transition: background-color .2s linear;
@@ -11898,54 +11952,126 @@ a.sports-icon.floor-hockey {
     padding: 15px 5px;
   }
 }
-.paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a:hover,
-.paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a:hover {
-  background-color: #505050;
+@media (min-width: 0) and (max-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a {
+    text-transform: uppercase;
+    border: none;
+    margin: 0;
+    font-size: 18px;
+    padding: 19px 15px;
+    text-align: left;
+    display: block;
+    height: auto;
+  }
 }
-.paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a:hover:after,
-.paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a:hover:after {
-  background-color: #505050 !important;
+@media (min-width: 992px) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a:hover,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a:hover {
+    background-color: #505050;
+  }
 }
-.paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a.active:after,
-.paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a.active:after {
-  position: absolute;
-  bottom: -12px;
-  left: 50%;
-  z-index: -1;
-  display: block;
-  margin-left: -15px;
-  width: 30px;
-  height: 30px;
-  border-radius: 3px;
-  background-color: #383838;
-  content: ' ';
-  -webkit-transition: background-color .2s linear;
-  -moz-transition: background-color .2s linear;
-  -ms-transition: background-color .2s linear;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
+@media (min-width: 992px) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a:hover:after,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a:hover:after {
+    background-color: #505050 !important;
+  }
 }
-.paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li:first-child a,
-.paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li:first-child a {
-  line-height: 0;
-  font-size: 0;
-  color: transparent;
+@media (min-width: 0) and (max-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a.active,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a.active {
+    background-color: transparent !important;
+  }
 }
-.paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li:first-child a:before,
-.paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li:first-child a:before {
-  content: "\e021";
-  position: relative;
-  display: inline-block;
-  font-family: 'Glyphicons Halflings';
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.4em;
-  -webkit-font-smoothing: antialiased;
-  font-size: 16px;
-  color: white;
+@media (min-width: 992px) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a.active:after,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a.active:after {
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    z-index: -1;
+    display: block;
+    margin-left: -15px;
+    width: 30px;
+    height: 30px;
+    border-radius: 3px;
+    background-color: #383838;
+    content: ' ';
+    -webkit-transition: background-color .2s linear;
+    -moz-transition: background-color .2s linear;
+    -ms-transition: background-color .2s linear;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+  }
 }
-@media (min-width: 75em) {
+@media (min-width: 0) and (max-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a .name,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a .name {
+    display: inline-block;
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+  }
+}
+@media (min-width: 0) and (max-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a.open .caret:before,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a.open .caret:before {
+    content: "\e082";
+  }
+}
+@media (min-width: 0) and (max-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a .caret,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a .caret {
+    display: inline-block;
+    width: auto;
+    height: 10px;
+    border: 0;
+    position: relative;
+    float: right;
+    top: -2px;
+  }
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li a .caret:before,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li a .caret:before {
+    content: "\e081";
+    margin-right: .3em;
+    vertical-align: middle;
+    text-transform: none;
+    font-weight: normal;
+    font-size: 16px;
+    font-family: 'Glyphicons Halflings';
+  }
+}
+@media (min-width: 0) and (max-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li:first-child,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li:first-child {
+    display: list-item;
+  }
+}
+@media (min-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li:first-child a,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li:first-child a {
+    line-height: 0;
+    font-size: 0;
+    color: transparent;
+  }
+}
+@media (min-width: 62em) {
+  .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li:first-child a:before,
+  .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li:first-child a:before {
+    content: "\e021";
+    position: relative;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.4em;
+    -webkit-font-smoothing: antialiased;
+    font-size: 16px;
+    color: #fff;
+  }
+}
+@media (min-width: 62em) and (min-width: 75em) {
   .paragraph--type--microsites-menu .camp-menu-wrapper .camp-menu li:first-child a:before,
   .paragraph--type--camp-menu .camp-menu-wrapper .camp-menu li:first-child a:before {
     font-size: 20px;
@@ -12033,7 +12159,7 @@ a.sports-icon.floor-hockey {
   -o-user-select: none;
   user-select: none;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
-  color: #FFF;
+  color: #fff;
   border: 0;
   border-radius: 3px;
   text-transform: uppercase;
@@ -12228,11 +12354,18 @@ a.sports-icon.floor-hockey {
   right: -4px;
   left: auto;
   z-index: 10;
+  width: 260px;
 }
 
 @media (min-width: 0) and (max-width: 47.9375em) {
   .branch-header .branch-hours {
     display: block !important;
+  }
+}
+
+@media (min-width: 0) and (max-width: 47.9375em) {
+  .location-camp-header .hours {
+    display: none !important;
   }
 }
 
