--- a/themes/openy_themes/openy_lily/sass/misc/_camps-locations.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_camps-locations.scss
@@ -1,13 +1,19 @@
 .paragraph--type--microsites-menu,
 .paragraph--type--camp-menu {
   margin-bottom: 30px;
-  @include breakpoint (0 $tablet) {
-    display: none;
+  @include breakpoint (0 $tablet-start) {
+    position: relative;
+    height: auto;
+    z-index: 10;
+    width: 100%;
+    margin-bottom: 0;
   }
   .camp-menu-wrapper {
-    padding: 0 30px;
+    @media (min-width: $tablet-start) {
+      padding: 0 30px;
+      z-index: 8;
+    }
     background: #383838;
-    z-index:8;
     overflow: visible !important;
     .columns-gradient {
       background: #383838;
@@ -18,15 +24,42 @@
     .camp-menu {
       width: 100% !important;
       text-align: center;
-      height: 51px !important;
+      @media (min-width: $tablet-start) {
+        height: 51px !important;
+      }
       @include breakpoint ($desktop) {
         height: 57px !important;
       }
+      @include breakpoint (0 $tablet-start) {
+        display: block;
+        position: static;
+        float: none;
+        min-width: 1px;
+        padding: 0;
+        margin: 0;
+        background-color: transparent;
+        border: none;
+        border-radius: 0;
+        box-shadow: none;
+        height: auto;
+      }
       li {
         float: none;
-        display: table-cell;
-        width: 1%;
-        vertical-align: top;
+        @media (min-width: $tablet-start) {
+          display: table-cell;
+          width: 1%;
+          vertical-align: top;
+        }
+        @include breakpoint (0 $tablet-start) {
+          background: none;
+          display: none;
+          border-top: 1px solid #3e3e3e;
+          margin: 0;
+          position: relative;
+          padding: 0;
+          list-style: none;
+          height: auto;
+        }
         a {
           z-index: 1;
           display: block;
@@ -35,68 +68,132 @@
           border: 0 !important;
           border-radius: 0;
           background-color: #383838;
-          color: #FFF;
+          color: $white;
           position: relative;
           height: 51px;
           white-space: nowrap;
           font-weight: normal;
+          font-family: "Cachet", Verdana, Geneva, sans-serif;
           font-size: 16px;
-          @include breakpoint ($desktop) {
-            font-size: 20px;
-            height: 57px;
-            padding: 15px 5px;
-          }
           line-height: 1.4em;
           -webkit-transition: background-color .2s linear;
           -moz-transition: background-color .2s linear;
           -ms-transition: background-color .2s linear;
           transition: background-color .2s linear;
+          @include breakpoint ($desktop) {
+            font-size: 20px;
+            height: 57px;
+            padding: 15px 5px;
+          }
+          @include breakpoint (0 $tablet-start) {
+            text-transform: uppercase;
+            border: none;
+            margin: 0;
+            font-size: 18px;
+            padding: 19px 15px;
+            text-align: left;
+            display: block;
+            height: auto;
+          }
           &:hover {
-            background-color: #505050;
+            @media (min-width: $tablet-start) {
+              background-color: #505050;
+            }
             &:after {
-              background-color: #505050 !important;
+              @media (min-width: $tablet-start) {
+                background-color: #505050 !important;
+              }
             }
           }
           &.active {
+            @include breakpoint (0 $tablet-start) {
+              background-color: transparent !important;
+            }
             &:after {
-              position: absolute;
-              bottom: -12px;
-              left: 50%;
-              z-index: -1;
-              display: block;
-              margin-left: -15px;
-              width: 30px;
-              height: 30px;
-              border-radius: 3px;
-              background-color: #383838;
-              content: ' ';
-              -webkit-transition: background-color .2s linear;
-              -moz-transition: background-color .2s linear;
-              -ms-transition: background-color .2s linear;
-              -webkit-transform: rotate(45deg);
-              -moz-transform: rotate(45deg);
-              -ms-transform: rotate(45deg);
+              @media (min-width: $tablet-start) {
+                position: absolute;
+                bottom: -12px;
+                left: 50%;
+                z-index: -1;
+                display: block;
+                margin-left: -15px;
+                width: 30px;
+                height: 30px;
+                border-radius: 3px;
+                background-color: #383838;
+                content: ' ';
+                -webkit-transition: background-color .2s linear;
+                -moz-transition: background-color .2s linear;
+                -ms-transition: background-color .2s linear;
+                -webkit-transform: rotate(45deg);
+                -moz-transform: rotate(45deg);
+                -ms-transform: rotate(45deg);
+              }
+            }
+          }
+          .name {
+            @include breakpoint (0 $tablet-start) {
+              display: inline-block;
+              font-size: 18px;
+              font-weight: bold;
+              color: $white;
+            }
+          }
+          &.open {
+            .caret {
+              @include breakpoint (0 $tablet-start) {
+                &:before {
+                  content: "\e082";
+                }
+              }
+            }
+          }
+          .caret {
+            @include breakpoint (0 $tablet-start) {
+              display: inline-block;
+              width: auto;
+              height: 10px;
+              border: 0;
+              position: relative;
+              float: right;
+              top: -2px;
+              &:before {
+                content: "\e081";
+                margin-right: .3em;
+                vertical-align: middle;
+                text-transform: none;
+                font-weight: normal;
+                font-size: 16px;
+                font-family: 'Glyphicons Halflings';
+              }
             }
           }
         }
         &:first-child {
+          @include breakpoint (0 $tablet-start) {
+            display: list-item;
+          }
           a {
-            line-height: 0;
-            font-size: 0;
-            color: transparent;
+            @include breakpoint ($tablet-start) {
+              line-height: 0;
+              font-size: 0;
+              color: transparent;
+            }
             &:before {
-              content: "\e021";
-              position: relative;
-              display: inline-block;
-              font-family: 'Glyphicons Halflings';
-              font-style: normal;
-              font-weight: 400;
-              line-height: 1.4em;
-              -webkit-font-smoothing: antialiased;
-              font-size: 16px;
-              color: white;
-              @include breakpoint ($desktop) {
-                font-size: 20px;
+              @include breakpoint ($tablet-start) {
+                content: "\e021";
+                position: relative;
+                display: inline-block;
+                font-family: 'Glyphicons Halflings';
+                font-style: normal;
+                font-weight: 400;
+                line-height: 1.4em;
+                -webkit-font-smoothing: antialiased;
+                font-size: 16px;
+                color: $white;
+                @include breakpoint ($desktop) {
+                  font-size: 20px;
+                }
               }
             }
           }
@@ -179,7 +276,7 @@
       -o-user-select: none;
       user-select: none;
       box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
-      color: #FFF;
+      color: $white;
       border: 0;
       border-radius: 3px;
       text-transform: uppercase;
@@ -366,11 +463,20 @@
   right: -4px;
   left: auto;
   z-index: 10;
+  width: 260px;
 }
 
 .branch-header .branch-hours {
   @include breakpoint(0 767px) {
     display: block !important;
+  }
+}
+
+.location-camp-header {
+  .hours {
+    @include breakpoint(0 767px) {
+      display: none !important;
+    }
   }
 }
 
