--- a/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--webform--default.html.twig
+++ b/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--webform--default.html.twig
@@ -38,9 +38,10 @@
 #}
 {%
 set classes = [
-  'webform',
-  'container',
-  'clearfix',
+'webform',
+'container',
+'clearfix',
+'row',
 ]
 %}
 <article{{ attributes.addClass(classes) }}>
