--- a/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--blog-posts-listing.html.twig
+++ b/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--blog-posts-listing.html.twig
@@ -43,7 +43,12 @@ set classes = [
 view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 ]
 %}
+{% if content.field_prgf_title.0 is empty %}
+  {% set title = 'Latest news & Updates'|t %}
+{% else %}
+  {% set title = content.field_prgf_title.0 %}
+{% endif %}
 <div{{ attributes.addClass(classes) }}>
-  <h2 class="h1">{{ 'Latest Blog Posts'|t }}</h2>
-  {{ content }}
+  <h2 class="h1">{{ title }}</h2>
+  {{ content|without('field_prgf_title') }}
 </div>
