--- a/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--featured-news--default.html.twig
+++ b/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--featured-news--default.html.twig
@@ -39,6 +39,7 @@
 {%
 set classes = [
   'paragraph',
+  'news-card',
   'paragraph--type--' ~ paragraph.bundle|clean_class,
   view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 ]
