Fix colors in the theme.

--- a/themes/openy_themes/openy_lily/color/preview.css
+++ b/themes/openy_themes/openy_lily/color/preview.css
@@ -111,7 +111,7 @@
   background-color: #f86b05;
 }
 .branch-color-preview .color-preview-branch-menu {
-  background-color: #0060ad;
+  background-color: #383838;
   color: #ffffff;
 }
 .branch-color-preview .color-preview-branch-menu .color-preview-menu-link:first-child {
