--- a/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
+++ b/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
@@ -587,6 +587,10 @@
             display: block;
           }
         }
+        &:focus {
+          outline: none;
+          text-decoration: none;
+        }
       }
       &.no-left-border {
         //border-top-color: #eaeaea;
