Lily theme improvements and fixes

--- a/themes/openy_themes/openy_lily/css/style.css
+++ b/themes/openy_themes/openy_lily/css/style.css
@@ -4661,7 +4661,7 @@ html.js .branch__updates_queue__button {
   #schedules-search-form-wrapper .js-form-type-textfield {
     padding: 15px 0;
     margin-right: 18px;
-    width: 110px;
+    width: 120px;
   }
 }
 #schedules-search-form-wrapper .js-form-type-textfield label {
@@ -4687,33 +4687,32 @@ html.js .branch__updates_queue__button {
   padding-right: 20px;
   padding-left: 5px;
 }
-#schedules-search-form-wrapper .form-item-display {
-  float: left;
-  display: inline-block;
-  padding: 10px 0 5px;
+#schedules-search-form-wrapper .form-item.form-item-display {
+  clear: left;
+  padding: 0;
   width: 100%;
 }
 @media (min-width: 48em) {
-  #schedules-search-form-wrapper .form-item-display {
-    padding: 15px 0;
-    margin-right: 18px;
-    width: 110px;
+  #schedules-search-form-wrapper .form-item.form-item-display {
+    margin: 0;
+    width: 140px;
   }
 }
-#schedules-search-form-wrapper .form-item-display label {
+#schedules-search-form-wrapper .form-item.form-item-display label {
   font-size: 14px;
   line-height: 1.6;
   font-family: "Cachet", Verdana, Geneva, sans-serif;
   color: #4f4f4f;
   margin-bottom: 0;
+  display: inline-block;
 }
 @media (min-width: 48em) {
-  #schedules-search-form-wrapper .form-item-display label {
+  #schedules-search-form-wrapper .form-item.form-item-display label {
     margin-bottom: 5px;
   }
 }
-#schedules-search-form-wrapper .form-item-display input {
-  display: block;
+#schedules-search-form-wrapper .form-item.form-item-display input {
+  display: inline-block;
 }
 #schedules-search-form-wrapper .selects-container hr {
   border-color: #636466;
@@ -5277,11 +5276,7 @@ html.js .branch__updates_queue__button {
   }
 }
 .groupex-form-full .js-form-type-radios .js-form-type-radio label {
-<<<<<<< HEAD
-  font-family: "Helvetica Neue LT W01_55 Roman", Verdana, sans-serif;
-=======
   font-family: "Cachet", Verdana, Geneva, sans-serif;
->>>>>>> 0fc8befb1f3ef2541d04718cedb7cdc2c6672e7a
   font-size: 15px;
   margin: 0 0 0 7px;
   vertical-align: top;
@@ -5648,25 +5643,25 @@ body .branch-popup + .ui-widget-overlay {
   max-width: 100%;
   height: auto;
 }
-.modal-body [class*='form-type-radio'] {
+.modal-body .js-form-type-radio {
   display: inline-block;
   padding: 15px;
 }
 @media (min-width: 48em) {
-  .modal-body [class*='form-type-radio'] {
+  .modal-body .js-form-type-radio {
     width: 50%;
   }
 }
 @media (min-width: 75em) {
-  .modal-body [class*='form-type-radio'] {
+  .modal-body .js-form-type-radio {
     width: 33.33%;
   }
 }
-.modal-body [class*='form-type-radio'] input {
+.modal-body .js-form-type-radio input {
   margin: 4px 5px 0 0;
   margin-top: 1px \9;
 }
-.modal-body [class*='form-type-radio'] label {
+.modal-body .js-form-type-radio label {
   display: inline;
 }
 
@@ -8538,7 +8533,7 @@ legend {
 }
 @media (min-width: 0) and (max-width: 62em) {
   #schedules-search-form-wrapper .js-form-type-select {
-    width: 80px !important;
+    width: 110px !important;
   }
 }
 @media (min-width: 0) and (max-width: 48em) {
@@ -8547,6 +8542,18 @@ legend {
   }
   #schedules-search-form-wrapper .filters-container .container, #schedules-search-form-wrapper .filters-container .path-account .status-message, .path-account #schedules-search-form-wrapper .filters-container .status-message {
     padding: 0;
+  }
+}
+@media (min-width: 0) and (max-width: 62em) {
+  #schedules-search-form-wrapper .js-form-item-date {
+    clear: left;
+  }
+}
+@media (min-width: 48em) and (max-width: 62em) {
+  #schedules-search-form-wrapper .form-item.js-form-item-display {
+    clear: none;
+    float: left;
+    margin-top: 46px;
   }
 }
 
@@ -8577,22 +8584,26 @@ legend {
   background-color: #9c1f7b;
 }
 
-.webform-submission-contact-add-form .form-item {
-  padding: 0 15px;
-}
 .webform-submission-contact-add-form .form-item.js-form-item-name {
-  padding: 0;
-}
-.webform-submission-contact-add-form .form-item.js-form-item-name label {
-  display: block;
-  margin-left: 15px;
-}
-.webform-submission-contact-add-form .form-item.js-form-item-name .form-item {
-  padding: 0 15px;
+  padding: 0 15px 0 0;
   float: left;
   width: 50%;
 }
-.webform-submission-contact-add-form .form-item.form-item-area-of-interest, .webform-submission-contact-add-form .form-item.form-item-branch, .webform-submission-contact-add-form .form-item.form-item-email, .webform-submission-contact-add-form .form-item.form-item-phone {
+.webform-submission-contact-add-form .form-item.js-form-item-name label {
+  display: block;
+}
+.webform-submission-contact-add-form .form-item.js-form-item-email {
+  padding: 0 0 0 15px;
+  float: left;
+  width: 50%;
+}
+.webform-submission-contact-add-form .form-item.js-form-item-email label {
+  display: block;
+}
+.webform-submission-contact-add-form .form-item.js-form-item-subject {
+  clear: left;
+}
+.webform-submission-contact-add-form .form-item.form-item-area-of-interest, .webform-submission-contact-add-form .form-item.form-item-branch, .webform-submission-contact-add-form .form-item.form-item-phone {
   float: left;
   width: 50%;
 }
@@ -8600,16 +8611,6 @@ legend {
   .webform-submission-contact-add-form .form-item {
     width: 100% !important;
     padding: 0 !important;
-  }
-}
-.webform-submission-contact-add-form .form-actions,
-.webform-submission-contact-add-form .captcha {
-  margin-left: 15px;
-}
-@media (min-width: 0) and (max-width: 48em) {
-  .webform-submission-contact-add-form .form-actions,
-  .webform-submission-contact-add-form .captcha {
-    margin-left: 0;
   }
 }
 
@@ -11748,6 +11749,10 @@ a.sports-icon.floor-hockey {
 
 .addthis {
   margin-top: 20px;
+}
+
+.landing-content.one-column .subprogram-listing-item {
+  max-width: 780px;
 }
 
 .account-page-sidebar ul {
