--- a/themes/openy_themes/openy_lily/sass/misc/_templates.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_templates.scss
@@ -136,3 +136,11 @@ a.sports-icon {
 .addthis {
   margin-top: 20px;
 }
+
+.landing-content {
+  &.one-column {
+    .subprogram-listing-item {
+      max-width: 780px;
+    }
+  }
+}
