--- a/themes/openy_themes/openy_lily/sass/modules/_dialog.scss
+++ b/themes/openy_themes/openy_lily/sass/modules/_dialog.scss
@@ -116,7 +116,7 @@ body .branch-popup {
     @extend .row-eq-height;
   }
 
-  [class*='form-type-radio'] {
+  .js-form-type-radio {
     display: inline-block;
     padding: 15px;
 
