--- a/themes/openy_themes/openy_lily/templates/webform/webform--contact.html.twig
+++ b/themes/openy_themes/openy_lily/templates/webform/webform--contact.html.twig
@@ -21,7 +21,7 @@
  * @ingroup themeable
  */
 #}
-<div class="container contact-form">
+<div class="row contact-form">
   <form{{ attributes }}>
     {{ title_prefix }}
     {{ children }}
