Fix preview for theme colors.

--- a/themes/openy_themes/openy_lily/color/preview.css
+++ b/themes/openy_themes/openy_lily/color/preview.css
@@ -118,7 +118,7 @@
   margin-left: 10px;
 }
 .branch-color-preview .color-preview-branch-menu .hover {
-  background-color: #0089d1;
+  background-color: #505050;
 }
 .branch-color-preview .color-preview-main a {
   color: #01a491;
