Theme Secondary desctiption and sidebar prgf

--- a/themes/openy_themes/openy_lily/sass/base/_colors.scss
+++ b/themes/openy_themes/openy_lily/sass/base/_colors.scss
@@ -37,4 +37,5 @@ $extra-grey2: #a2a2a2;
 $extra-grey3: #e5e5e5;
 $extra-grey4: #777777;
 $extra-grey5: #a7a7a7;
+$extra-grey6: #5e5e5e;
 $extra-pink1: #aa228d;
