--- a/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -559,3 +559,64 @@
     margin-top: 0;
   }
 }
+
+.paragraph--type--secondary-description-sidebar {
+  background: $extra-grey3;
+  padding: 10px 0 20px 0;
+  margin-bottom: 20px;
+  color: $darker-grey;
+  font-family: $font-family-sans-serif;
+  font-weight: 200;
+  line-height: 1.4;
+  @include breakpoint ($tablet) {
+    margin-bottom: 40px;
+    padding: 0;
+  }
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 55%;
+    display: block;
+    width: 80%;
+    height: 100%;
+    background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+    background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+    background-image: -ms-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+    background-image: linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+    content: '';
+    -webkit-transform: skew(-30deg);
+    -moz-transform: skew(-30deg);
+    -ms-transform: skew(-30deg);
+    transform: skew(-30deg);
+  }
+  .left {
+    font-size: 18px;
+    padding-left: 0;
+    padding-right: 0;
+    @include breakpoint ($tablet) {
+      margin-bottom: 0;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      font-size: 21px;
+    }
+  }
+  .right {
+    font-size: 18px;
+    padding-left: 0;
+    padding-right: 0;
+    @include breakpoint ($tablet) {
+      margin-bottom: 0;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      font-size: 21px;
+    }
+    h2 {
+      color: $extra-grey6;
+      font-weight: bold;
+      margin-top: 0;
+      text-transform: uppercase;
+      font-size: 34px;
+      @include cachet();
+    }
+  }
+}
